updated footer styling

--- a/html/audiophile.html
+++ b/html/audiophile.html
@@ -16,7 +16,7 @@
             <div class="two-thirds-container">
                 <div class="text-content-block">
                     <h1>Audio</h1>
-                    <h2>I like quality audio</h2>
+                    <h2>I like high quality audio</h2>
                     <p>You might also enjoy some of the following tracks and audio excerpts:</p>
                     <ul>
                         <li>The album 'Mezzanine', by Massive Attack <a href="https://open.spotify.com/album/49MNmJhZQewjt06rpwp6QR?si=0Q_C4BKISbSK2Ivqo7k-Nw">listen on Spotify</a></li>
