--- a/html/recipe-carbonara.html
+++ b/html/recipe-carbonara.html
@@ -15,16 +15,16 @@
         <div class="content">
             <div class="two-thirds-container">
                 <div class="text-content-block">
-                    <h1>Carbonara Recipe</h1>
+                    <h1>Spaghetti Carbonara Recipe</h1>
                     <p>
                         This spaghetti <i>'alla'</i> Carbonara recipe requires very little of your time to prepare and cook, but you must pay close attention for the duration.
                     </p>
                     <p>
-                        Once sufficiently practiced, this meal becomes quite convenient thanks to the long shelf-life of its ingredients.
+                        Once sufficiently practiced, this meal becomes quite convenient thanks to the long shelf-life of its ingredients and short cooking time.
                     </p>
                     <h2>Overview</h2>
                     <ul>
-                        <li>Serves: 2</li>
+                        <li>Serves: 2 people</li>
                         <li>Time til ready: 13-15m<br>
                             <i>(up to 25 mins with frozen Garlic Bread)</i></li>
                         <li>Complexity: Medium <br>
