--- a/html/projects.html
+++ b/html/projects.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
-        <meta name="description" content="Miscellaneous personal projects"/>
+        <meta name="description" content="Misc' personal projects"/>
         <title>Elliott's Projects</title>
     </head>
     <body>
