+new button page, edit sitemap, +codeblock style

--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,7 @@
                 <div class="related-content-block">
                     <h2>Latest Content</h2>
                     <ul>
+                        <li><a href="/html/buttons">A collection of styled HTML buttons</a></li>
                         <li><a href="/html/this_website">The rationale behind this website's design</a></li>
                         <li><a href="/html/recipe-carbonara">A recipe for making Carbonara</a></li>
                     </ul>
