--- a/html/this_website.html
+++ b/html/this_website.html
@@ -51,6 +51,14 @@
                     </ul>
                 </div>
             </div>
+            <div class="one-third-container">
+                <div class="related-content-block">
+                    <h2>Similar Content</h2>
+                    <ul>
+                        <li><a href="/html/buttons">A collection of styled HTML buttons</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         {% include footer.html %}
     </body>
