--- a/html/buttons.html
+++ b/html/buttons.html
@@ -27,8 +27,7 @@
                     <p>
                         This effect is achieved as follows:
                     </p>
-                    <pre>
-                        <code>
+                    <pre><code>
 #button-one {
     border: solid black 1px;
     border-bottom: 6px black solid;
@@ -38,8 +37,7 @@
     border-bottom: 2px black solid;
     transform: translateY(4px);
 }
-                        </code>
-                    </pre>
+                    </code></pre>
                     <p>
                         Take care when changing live border values such as with <code>:hover</code> or <code>:active</code>, as this can bump neighbouring block elements around.
                     </p>
