--- a/html/contact.html
+++ b/html/contact.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
-        <meta name="description" content="Get Elliott's contact details"/>
+        <meta name="description" content="Contact details for Elliott"/>
         <title>Contact Elliott</title>
     </head>
     <body>
