updated cope in this_website

--- a/html/this_website.html
+++ b/html/this_website.html
@@ -41,13 +41,13 @@
                     </p>
                     <h2>There's something else...</h2>
                     <p>
-                        Yep. While purely coincidence, this site has similar motives (and appearance) to these satirical websites:
+                        Yep, there is. While purely coincidence, this site has similar motives (and appearance) to these satirically minimalist websites:
                     </p>
                     <ul>
                         <li><a href="">Motherf***ing Website</a></li>
                         <li><a href="">Better Motherf***ing Website</a></li>
                         <li><a href="">The Best Motherf***ing Website</a></li>
-                        <li><a href="">Perfect Motherf***cking Website</a></li>
+                        <li><a href="">Perfect Motherf***ing Website</a></li>
                     </ul>
                 </div>
             </div>
