--- a/html/index.html
+++ b/html/index.html
@@ -35,11 +35,19 @@
             </div>
             <div class="one-third-container">
                 <div class="related-content-block">
-                    <h2>Latest Content</h2>
+                    <h2>Elliott's Projects</h2>
                     <ul>
-                        <li><a href="/html/buttons">A collection of styled HTML buttons</a></li>
-                        <li><a href="/html/this_website">The rationale behind this website's design</a></li>
-                        <li><a href="/html/recipe-carbonara">A recipe for making Carbonara</a></li>
+                        <li><a href="/html/buttons">HTML button styling</a></li>
+                        <li><a href="/html/this_website">Designing this website</a></li>
+                        <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
+                        <li><a href="https://client.dreamingspires.dev/mat_dp_core/">Documentation for a demand projection library (external)</a></li>
+                    </ul>
+                </div>
+                <div class="related-content-block">
+                    <h2>Other Stuff</h2>
+                    <ul>
+                        <li><a href="/html/recipe-carbonara">A Carbonara recipe</a></li>
+                        <li><a href="/html/audiophile">My audio interests</a></li>
                     </ul>
                 </div>
             </div>
