--- a/html/recipe-carbonara.html
+++ b/html/recipe-carbonara.html
@@ -44,7 +44,7 @@
                     </ul>
                     <p>
                         * You can substitute lardons with rashers. I use thin, smoked, streaky bacon, but you could use thick unsmoked rashers without issue.<br>
-                        Any regular cooking/frying oil will work instead of olive oil. It's your choice.
+                        It's your choice.
                     </p>
                     <h2>Method</h2>
                     <p>
