--- a/html/this_website.html
+++ b/html/this_website.html
@@ -31,23 +31,24 @@
                     </p>
                     <h2>Okay, but why for your personal site?</h2>
                     <p>
-                        <i>Imitation is the highest form of flattery, I suppose...</i>
+                        <i>Imitation is the highest form of flattery, I suppose.</i>
                     </p>
                     <p>
                         Getting a website to be usable is a high priority for me; taking inspiration from the GDS' design system gives this website a solid foundation to build upon.
                     </p>
                     <p>
-                        From an interface design perspective, it is also a great opportunity to explore the design thinking and implementation details behind usable website components.
+                        From an interface design perspective, it is also a great opportunity to explore the design thinking and implementation details of highly usable websites.
                     </p>
                     <h2>There's something else...</h2>
                     <p>
-                        Yep, there is. While purely coincidence, this site has similar motives (and appearance) to these satirically minimalist websites:
+                        Yep, there is. While purely coincidence, this site has a similar motive (and appearance) to these satirical, minimalist websites:
                     </p>
                     <ul>
-                        <li><a href="">Motherf***ing Website</a></li>
-                        <li><a href="">Better Motherf***ing Website</a></li>
-                        <li><a href="">The Best Motherf***ing Website</a></li>
-                        <li><a href="">Perfect Motherf***ing Website</a></li>
+                        <li><a href="http://motherfuckingwebsite.com/">Motherf***ing Website (external)</a></li>
+                        <li><a href="http://bettermotherfuckingwebsite.com/">Better Motherf***ing Website (external)</a></li>
+                        <li><a href="https://evenbettermotherfucking.website/">Even Better Motherf***ing Website (external)</a></li>
+                        <li><a href="https://thebestmotherfuckingwebsite.co/">The Best Motherf***ing Website (external)</a></li>
+                        <li><a href="https://perfectmotherfuckingwebsite.com/">Perfect Motherf***ing Website (external)</a></li>
                     </ul>
                 </div>
             </div>
@@ -55,7 +56,8 @@
                 <div class="related-content-block">
                     <h2>Similar Content</h2>
                     <ul>
-                        <li><a href="/html/buttons">A collection of styled HTML buttons</a></li>
+                        <li><a href="/html/buttons">HTML button styling</a></li>
+                        <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
                     </ul>
                 </div>
             </div>
