--- a/html/index.html
+++ b/html/index.html
@@ -17,16 +17,18 @@
                 <div class="text-content-block">
                     <h1>Home</h1>
                     <p>
-                        Welcome to Elliott's personal site, elliotthuge.dev.
+                        Welcome to Elliott's personal site.
                     </p>
                     <h2>Who is Elliott?</h2>
                     <p>
-                        I'm a Computer Scientist currently working as a User Experience Designer.<br>
-                        I have a passion for interaction design - a subset of UX design - which involves designing things with usability and accessibility in mind.
+                        Elliott is a Computer Scientist currently working as a User Experience Designer.
+                    </p>
+                    <p>
+                        He has a passion for interaction design - a subset of UX design - which involves designing with a focus on usability and accessibility.
                     </p>
                     <h2>Look familiar?</h2>
                     <p>
-                        Aspects of this website may feel familiar, that is because the site is loosely based on the UK Government Design Service's (GDS) design system.<br>
+                        Aspects of this website may seem familiar, that is because the site is loosely based on the UK Government Design Service's (GDS) design system.<br>
                     </p>
                     <p>
                         You can read about the <a href="https://design-system.service.gov.uk/">GDS' design system on their website</a>.
