--- a/html/buttons.html
+++ b/html/buttons.html
@@ -96,7 +96,7 @@
                 <div class="related-content-block">
                     <h2>Similar Content</h2>
                     <ul>
-                        <li><a href="/html/this_website">The rationale behind this website's design</a></li>
+                        <li><a href="/html/this_website">Designing this website</a></li>
                     </ul>
                 </div>
             </div>
