Added design dimensions page

--- a/html/index.html
+++ b/html/index.html
@@ -39,6 +39,7 @@
                 <div class="related-content-block">
                     <h2>Elliott's Projects</h2>
                     <ul>
+                        <li><a href="/html/design-dimensions">On design dimensions</a></li>
                         <li><a href="/html/buttons">HTML button styling</a></li>
                         <li><a href="/html/this_website">Designing this website</a></li>
                         <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
