content edits design-dimensions

--- a/html/design-dimensions.html
+++ b/html/design-dimensions.html
@@ -43,14 +43,14 @@
                         It can therefore be said that design dimensions aren't inherently canonical - although some seem pretty close.
                     </p>
                     <p>
-                        This is why the ultimate in design practice is user-testing: if a user-test adequately reflects reality, then they in effect are applying every possible design dimensions at once - including those as yet undescribed.
+                        This is why the ultimate in design practice is user-testing: if a user-test adequately reflects reality, then they are effectively applying every possible dimension of design at once - including those as yet undescribed!
                     </p>
                     <p>
-                        "Just user-test, then!" I hear you cry. Yes, we should probably be user-testing way more. However, <i>user-testing doth not a designer make</i>.
+                        "Just user-test, then!" I hear you cry. Yes, that's the spirit. I'm sure we all think that every design team should be user-testing more. However, lets not forget that <i>user-testing doth not a designer make</i>.
                     </p>
-                    <h2>Justifying design dimensions</h2>
+                    <h2>The purpose of design dimensions</h2>
                     <p>
-                        The case for utilising design dimensions is twofold: to avoid rediscovering fire, and to support the creative process.
+                        The case for utilising design dimensions is twofold: to avoid 'rediscovering fire', and to support the creative process.
                     </p>
                     <p>
                         <i>04/09/2022 - To be continued</i>
