--- a/html/design-dimensions.html
+++ b/html/design-dimensions.html
@@ -16,25 +16,45 @@
             <div class="two-thirds-container">
                 <div class="text-content-block">
                     <h1>Design Dimensions</h1>
-                    <p>
-                        Design work is messy.
-                    </p>
                     <h2>Intro'</h2>
                     <p>
-                        Good designs are often the result of what I like to call 'idea-thrashing'. <br>
-                        Broadly speaking, a designer takes in swathes of information about a design problem, then creates and assesses their ideas. <br>
-                        By the end, the best ideas are those left relatively unscathed.
+                        Broadly speaking, a designer's function is to take information about a design problem, garner some ideas, then assess and test them until a good ideas emerge.
                     </p>
                     <p>
-                        Design dimensions - or principles - are the conceptual frameworks designers use to help create and assess their ideas against the information available. <br>
+                        Design dimensions - also known as laws, principles, perspectives and so on - are the many conceptual frameworks designers adopt when creating and assessing their ideas.
                     </p>
                     <p>
-                        A design problem, its various factors, and some possible design ideas are enigmatic to someone lacking these concepts. In fact, you could argue that <i>they are not a designer at all</i>.
+                        Below are some examples, note that some of these may have overlapping content, or be broader than others:
+                    </p>
+                    <ul>
+                        <li>Usability</li>
+                        <li>Trust</li>
+                        <li>Appeal</li>
+                        <li>Convention</li>
+                        <li>Aesthetics</li>
+                        <li>Signifiers</li>
+                        <li>Physical context</li>
+                    </ul>
+                    <p>
+                        These dimensions are important: someone unaware of these would find a design problem enigmatic. You could even argue that <i>they are not a designer at all</i>.
                     </p>
                     <p>
-                        If a design idea were a break-board, design dimensions are both the hands that set them up, and the many fists attempting to break them.
+                        If a design idea were a break-board, design dimensions are both the hands that set them up, and the many fists attempting to break them. Good ideas get broken very rarely.
                     </p>
-                    <h2>User-testing?</h2>
+                    <h2>An example: Order</h2>
+                    <p>
+                        One dimension of design I recently found myself considering was <i>Order</i>. By order, I mean the sequential order of things: A to B to C.
+                    </p>
+                    <p>
+                        Order is rarely considered explicitly; in life, the 'correct' sequential order is often obvious: I put on my socks before my shoes, I select the washing cycle before I start the washing machine.
+                    </p>
+                    <p>
+                        As with any dimension of design, failing to consider order runs the risk of locking ourselves into sub-optimal design decisions: we reach local maxima.
+                    </p>
+                    <p>
+                        I place particular emphasis on order specifically because it is fundamental, and often assumed early on in the design process.
+                    </p>
+                    <h2>What about user-testing?</h2>
                     <p>
                         You're right. User-testing is real, and design dimensions aren't!
                     </p>
@@ -53,7 +73,7 @@
                         The case for utilising design dimensions is twofold: to avoid 'rediscovering fire', and to support the creative process.
                     </p>
                     <p>
-                        <i>04/09/2022 - To be continued</i>
+                        <i>05/09/2022 - To be continued</i>
                     </p>
                 </div>
             </div>
