Updated body text

--- a/html/index.html
+++ b/html/index.html
@@ -21,17 +21,14 @@
                     </p>
                     <h2>Who is Elliott?</h2>
                     <p>
-                        Elliott is a Computer Scientist currently working as a User Experience Designer.
+                        Elliott is a Computer Scientist working as a User Experience Designer.
                     </p>
                     <p>
-                        He has a passion for interaction design - a subset of UX design - which involves designing with a focus on usability and accessibility.
+                        He has a passion for usability and accessibility.
                     </p>
                     <h2>Look familiar?</h2>
                     <p>
-                        Aspects of this website may seem familiar, that is because the site is loosely based on the UK Government Design Service's (GDS) design system.<br>
-                    </p>
-                    <p>
-                        You can read about the <a href="https://design-system.service.gov.uk/">GDS' design system on their website</a>.
+                        This site is loosely based on the UK Government Digital Service's (GDS) <a href="https://design-system.service.gov.uk/">GOV.UK Design System</a>.
                     </p>
                 </div>
             </div>
