--- a/html/this_website.html
+++ b/html/this_website.html
@@ -18,30 +18,30 @@
                     <h1>This Website</h1>
                     <h2>Why take inspiration from the UK Government for website design?</h2>
                     <p>
-                        The Government Design Service (GDS) - along with all public-sector design teams - are uniquely positioned in the world of interaction design:
+                        The Government Digital Service (GDS) - along with all public-sector digital teams - are uniquely positioned in the world of interaction design:
                     </p>
                     <ul>
                         <li>They are unlikely to abuse 'Dark Patterns' (<a href="https://blog.mozilla.org/en/internet-culture/mozilla-explains/deceptive-design-patterns/">you can read about deceptive design on mozilla.org</a>) since their organisation is not oriented around profit.*</li>
-                        <li>Usability and accessibility for end users are some of their employer's Key Performance Indicators (KPIs) instead of an afterthought.</li>
-                        <li>Due to the many faceted functions of government, their work is interdisciplinary and therefore likely to be applicable in various contexts.</li>
-                        <li>They have a unique opportunity to spend time conducting design research, where the private sector might prefer to rush an artefact to production.</li>
+                        <li>Usability and accessibility for end users are their Key Performance Indicators (KPIs), rather than an afterthought.</li>
+                        <li>Due to the many faceted functions of government, their work is multidisciplinary and therefore likely to have applicability in various contexts.</li>
+                        <li>They have a unique opportunity to spend time conducting design research, where the private sector may instead rush an artefact to production.</li>
                     </ul>
                     <p>
-                        *<i>You could argue that HMRC is 'profit-seeking'.</i>
+                        *<i>One could argue that HMRC is 'profit-seeking'.</i>
                     </p>
-                    <h2>Okay, but why for your personal site?</h2>
+                    <h2>Why for your personal site?</h2>
                     <p>
-                        <i>Imitation is the highest form of flattery, I suppose.</i>
-                    </p>
-                    <p>
-                        Getting a website to be usable is a high priority for me; taking inspiration from the GDS' design system gives this website a solid foundation to build upon.
+                        <i>Imitation is the highest form of flattery.</i>
                     </p>
                     <p>
-                        From an interface design perspective, it is also a great opportunity to explore the design thinking and implementation details of highly usable websites.
+                        Getting a website to be usable is a high priority for me; taking inspiration from the GDS' design system gives this website a solid research-backed foundation to build upon.
+                    </p>
+                    <p>
+                        From an design perspective, it is an opportunity to explore the design thinking and implementation details of highly usable website components.
                     </p>
                     <h2>There's something else...</h2>
                     <p>
-                        Yep, there is. While purely coincidence, this site has a similar motive (and appearance) to these satirical, minimalist websites:
+                        Yes, there is. While purely coincidence, this site has similar motive and final appearance to the below satirical, minimalist websites:
                     </p>
                     <ul>
                         <li><a href="http://motherfuckingwebsite.com/">Motherf***ing Website (external)</a></li>
