--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
-        <meta name="description" content="Elliott Hughes' personal website"/>
+        <meta name="description" content="Elliott H.'s personal website"/>
         <title>Elliott H.</title>
     </head>
     <body>
@@ -31,20 +31,23 @@
             </div>
             <div class="one-third-container">
                 <div class="related-content-block">
-                    <h2>Elliott's Projects</h2>
+                    <h2>Useful links</h2>
+                    <ul>
+                        <li><a href="/html/cv">View Curriculum Vitae (CV)</a></li>
+                        <li><a href="/html/contact">Contact Elliott</a></li>
+                        <li><a href="/html/projects">View Elliott's projects</a></li>
+                    </ul>
+                </div>
+                <div class="related-content-block">
+                    <h2>Other pages</h2>
                     <ul>
                         <li><a href="/html/design-dimensions">On design dimensions</a></li>
                         <li><a href="/html/buttons">HTML button styling</a></li>
                         <li><a href="/html/this_website">Designing this website</a></li>
-                        <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
-                        <li><a href="https://client.dreamingspires.dev/mat_dp_core/">Documentation for a demand projection library (external)</a></li>
-                    </ul>
-                </div>
-                <div class="related-content-block">
-                    <h2>Other Stuff</h2>
-                    <ul>
                         <li><a href="/html/recipe-carbonara">A Carbonara recipe</a></li>
+                        <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
                         <li><a href="/html/audiophile">My audio interests</a></li>
+                        <li><a href="https://client.dreamingspires.dev/mat_dp_core/">Documentation for a demand projection library (external)</a></li>
                     </ul>
                 </div>
             </div>
