--- a/html/cv.html
+++ b/html/cv.html
@@ -16,7 +16,7 @@
         <div class="content">
             <div class="two-thirds-container">
                 <div class="text-content-block">
-                    <h1>Curriculum Vitae (CV)</h1>
+                    <h1>Curriculum Vitae</h1>
                     <h2>Personal summary</h2>
                     <p>
                         A computer scientist working as a User Experience (UX) designer.<br>
@@ -27,7 +27,7 @@
                         Years of Experience: 2<br>
                         Sectors: <i>Social work, Fast-Moving Consumer Goods (FMCG) manufacturing, Research</i>
                     </p>
-                    <h3><span class="material-symbols-outlined">design_services</span> UX Designer (Current role)</h3>
+                    <h3><span class="material-symbols-outlined" aria-hidden="true">design_services</span>UX Designer (Current role)</h3>
                     <p>&emsp;<i>Children and Family Court Advisory and Support Service (Cafcass)</i></p>
                     <ul>
                         <li>Designing new and amended ChildFirst CMS features using Figma and the Material design system.</li>
@@ -38,7 +38,7 @@
                     </ul>
                     <br>
 
-                    <h3><span class="material-symbols-outlined">terminal</span> IT Officer / Junior Software Developer</h3>
+                    <h3><span class="material-symbols-outlined" aria-hidden="true">terminal</span>IT Officer / Junior Software Developer</h3>
                     <p>&emsp;<i>UK-based moulded packaging manufacturer</i></p>
                     <ul>
                         <li>Designed and developed a web-based Overall Equipment Efficiency (OEE) reporting app using Adobe XD, Microsoft Server Studio, and C# .NET Core.</li>
@@ -51,7 +51,7 @@
                     </ul>
                     <br>
 
-                    <h3><span class="material-symbols-outlined">biotech</span> Co-Founder, Generalist</h3>
+                    <h3><span class="material-symbols-outlined" aria-hidden="true">biotech</span>Co-Founder, Generalist</h3>
                     <p>&emsp;<i>Dreaming Spires</i></p>
                     <ul>
                         <li>Project-managed several open-source software for research projects.</li>
@@ -66,23 +66,10 @@
             </div>
             <div class="one-third-container">
                 <div class="related-content-block">
-                    <h2>Useful links</h2>
+                    <h2>Related links</h2>
                     <ul>
-                        <li><a href="/html/cv">View Curriculum Vitae (CV)</a></li>
                         <li><a href="/html/contact">Contact Elliott</a></li>
                         <li><a href="/html/projects">View Elliott's projects</a></li>
-                    </ul>
-                </div>
-                <div class="related-content-block">
-                    <h2>Other pages</h2>
-                    <ul>
-                        <li><a href="/html/design-dimensions">On design dimensions</a></li>
-                        <li><a href="/html/buttons">HTML button styling</a></li>
-                        <li><a href="/html/this_website">Designing this website</a></li>
-                        <li><a href="/html/recipe-carbonara">A Carbonara recipe</a></li>
-                        <li><a href="https://www.bluebelllane.co.uk/">Website for Bluebell Lane Floristry (external)</a></li>
-                        <li><a href="/html/audiophile">My audio interests</a></li>
-                        <li><a href="https://client.dreamingspires.dev/mat_dp_core/">Documentation for a demand projection library (external)</a></li>
                     </ul>
                 </div>
             </div>
