Slight text edits to CV

--- a/html/cv.html
+++ b/html/cv.html
@@ -46,7 +46,7 @@
                         <li>Designed a SQL database to replace paper, .docx, and .xlsx formatted product information.<br>
                             This laid the groundwork for a Product Information System (PrInS) to centralise data about: versioned products, product packaging configurations, physical tooling (product molds), and corresponding machine settings.</li>
                         <li>Investigated linear programming for optimal allocation of finite production resources by cost/gain, and staff by proficiency.</li>
-                        <li>Procured of a stock control system to replace manual .xlsx based stock control.</li>
+                        <li>Procured of a stock control system to replace manual .xlsx formatted stock control.</li>
                         <li>Advocated for improved working conditions and Health & Safety (H&S) standards in line with Health and Safety Executive (HSE) guidelines.</li>
                     </ul>
                     <br>
@@ -57,7 +57,7 @@
                         <li>Project-managed several open-source software for research projects.</li>
                         <li>Conducted thorough requirements capture, user interviews, and interface design where applicable.</li>
                         <li>Delivered an online UX presentation and workshop at an  Alan Turing Institute event on Research Software Engineering (RSE).</li>
-                        <li>Prepared contracts and handled account management for several research clients.</li>
+                        <li>Prepared contracts and managed accounts for collaborators.</li>
                         <li>Collaborated with various research institutions including: University of Cambridge, University of Oxford, Max Planck Institute Berlin, and Harvard Department of Anthropology.</li>
                     </ul>
                     <br>
