Text underline offset fix

--- a/html/contact.html
+++ b/html/contact.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../res/icon.png"/>
         <link rel="stylesheet" href="../css/style.css"/>
+        <!-- <link rel="stylesheet" href="../css/hal.css"/> -->
         <meta name="description" content="Contact details for Elliott"/>
         <title>Contact Elliott</title>
     </head>
@@ -23,6 +24,12 @@
                     </ul>
                 </div>
             </div>
+            <!-- <div id="hal-container">
+                <div class="circle" id="hal-outline"></div>
+                <div class="circle" id="hal-white"></div>
+                <div class="circle" id="hal-iris"></div>
+                <div class="circle" id="hal-pupil"></div>
+            </div> -->
         </div>
         {% include footer.html %}
     </body>
