--- a/html/index.html
+++ b/html/index.html
@@ -16,14 +16,9 @@
             <div class="two-thirds-container">
                 <div class="text-content-block">
                     <h1>Home</h1>
-                    <h2>Who is Elliott?</h2>
-                    <p>
-                        Elliott is a Computer Scientist working as a User Experience Designer.
-                    </p>
-                    <p>
-                        He has a passion for usability and accessibility.
-                    </p>
-                    <h2>Look familiar?</h2>
+                    <h2>Elliott is a User Experience Designer.</h2>
+                    <p>He has a passion for usability and accessibility.</p>
+                    <h3>Look familiar?</h3>
                     <p>
                         This site is loosely based on the UK Government Digital Service's (GDS) <a href="https://design-system.service.gov.uk/">GOV.UK Design System</a>.
                     </p>
