Added skills and interests to CV

--- a/html/cv.html
+++ b/html/cv.html
@@ -66,7 +66,38 @@
             </div>
             <div class="one-third-container">
                 <div class="related-content-block">
-                    <h2>Related links</h2>
+                    <h3>Soft skills</h3>
+                    <ul>
+                        <li>User Interface (UI) design</li>
+                        <li>Usability testing</li>
+                        <li>Business analysis</li>
+                        <li>Database design</li>
+                        <li>Software development</li>
+                        <li>Open-source projects</li>
+                    </ul>
+                    <br>
+                    <h3>Technical skills</h3>
+                    <ul>
+                        <li>Figma</li>
+                        <li>Miro</li>
+                        <li>HTML / CSS3</li>
+                        <li>Azure DevOps</li>
+                        <li>SQL</li>
+                        <li>Microsoft 365</li>
+                    </ul>
+                    <br>
+                    <h3>Domains of interest</h3>
+                    <ul>
+                        <li>Aviation</li>
+                        <li>Manufacturing</li>
+                        <li>Psychology</li>
+                        <li>Medicine</li>
+                        <li>Audio</li>
+                        <li>Finance and investing</li>
+                        <li>Science, Technology, Engineering and Maths (STEM)</li>
+                    </ul>
+                    <hr>
+                    <h3>Related links</h3>
                     <ul>
                         <li><a href="/html/contact">Contact Elliott</a></li>
                         <li><a href="/html/projects">View Elliott's projects</a></li>
