Added wireframing and prototyping soft skill

--- a/html/cv.html
+++ b/html/cv.html
@@ -69,6 +69,7 @@
                     <h3>Soft skills</h3>
                     <ul>
                         <li>User Interface (UI) design</li>
+                        <li>Wireframing and prototyping</li>
                         <li>Usability testing</li>
                         <li>Business analysis</li>
                         <li>Database design</li>
