Tidied CV, Css rules for line spacing

--- a/html/cv.html
+++ b/html/cv.html
@@ -67,36 +67,32 @@
             <div class="one-third-container">
                 <div class="related-content-block">
                     <h3>Soft skills</h3>
-                    <ul>
-                        <li>User Interface (UI) design</li>
-                        <li>Wireframing and prototyping</li>
-                        <li>Usability testing</li>
-                        <li>Business analysis</li>
-                        <li>Database design</li>
-                        <li>Software development</li>
-                        <li>Open-source projects</li>
-                    </ul>
+                    <p>User Interface (UI) design</p>
+                    <p>Usability testing</p>
+                    <p>Business analysis</p>
+                    <p>Database design</p>
+                    <p>Software development</p>
+                    <p>Open-source projects</p>
                     <br>
+
                     <h3>Technical skills</h3>
-                    <ul>
-                        <li>Figma</li>
-                        <li>Miro</li>
-                        <li>HTML / CSS3</li>
-                        <li>Azure DevOps</li>
-                        <li>SQL</li>
-                        <li>Microsoft 365</li>
-                    </ul>
+                    <p>Figma</p>
+                    <p>Miro</p>
+                    <p>HTML / CSS3</p>
+                    <p>Azure DevOps</p>
+                    <p>SQL</p>
+                    <p>Microsoft 365</p>
                     <br>
+
                     <h3>Domains of interest</h3>
-                    <ul>
-                        <li>Aviation</li>
-                        <li>Manufacturing</li>
-                        <li>Psychology</li>
-                        <li>Medicine</li>
-                        <li>Audio</li>
-                        <li>Finance and investing</li>
-                        <li>Science, Technology, Engineering and Maths (STEM)</li>
-                    </ul>
+                    <p>Aviation</p>
+                    <p>Manufacturing</p>
+                    <p>Psychology</p>
+                    <p>Medicine</p>
+                    <p>Audio</p>
+                    <p>Finance and investing</p>
+                    <p>Science, Technology, Engineering and Maths (STEM)</p>
+
                     <hr>
                     <h3>Related links</h3>
                     <ul>
