--- a/html/cv.html
+++ b/html/cv.html
@@ -46,7 +46,7 @@
                         <li>Designed a SQL database to replace paper, .docx, and .xlsx formatted product information.<br>
                             This laid the groundwork for a Product Information System (PrInS) to centralise data about: versioned products, product packaging configurations, physical tooling (product molds), and corresponding machine settings.</li>
                         <li>Investigated linear programming for optimal allocation of finite production resources by cost/gain, and staff by proficiency.</li>
-                        <li>Procured of a stock control system to replace manual .xlsx formatted stock control.</li>
+                        <li>Procured a stock control system to replace manual .xlsx formatted stock control.</li>
                         <li>Advocated for improved working conditions and Health & Safety (H&S) standards in line with Health and Safety Executive (HSE) guidelines.</li>
                     </ul>
                     <br>
@@ -73,7 +73,6 @@
                     <p>Database design</p>
                     <p>Software development</p>
                     <p>Open-source projects</p>
-                    <br>
 
                     <h3>Technical skills</h3>
                     <p>Figma</p>
@@ -82,7 +81,6 @@
                     <p>Azure DevOps</p>
                     <p>SQL</p>
                     <p>Microsoft 365</p>
-                    <br>
 
                     <h3>Domains of interest</h3>
                     <p>Aviation</p>
@@ -92,7 +90,7 @@
                     <p>Audio</p>
                     <p>Finance and investing</p>
                     <p>Science, Technology, Engineering and Maths (STEM)</p>
-
+                    <br>
                     <hr>
                     <h3>Related links</h3>
                     <ul>
